<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_food"
        android:title="@string/s_menu_add_food"
        android:icon="@drawable/ic_action_add_"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/username"
        android:title="@string/s_menu_username" />

    <item
        android:id="@+id/setting"
        android:title="@string/s_menu_setting" />

    <item
        android:id="@+id/log_out"
        android:title="@string/s_menu_log_out" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/s_menu_search_food"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"/>
    <!--<item-->
        <!--android:id="@+id/action_search"-->
        <!--android:icon="@drawable/abc_ic_search_api_mtrl_alpha"-->
        <!--android:title="Search"-->
        <!--app:actionViewClass="android.support.v7.widget.SearchView"-->
        <!--app:showAsAction="ifRoom|collapseActionView" />-->


</menu>