<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_activity_sign_up"
        style="@style/toolbar_style"
        app:title="@string/s_title_toolbar_activity_sign_up" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/d_margin_padding_20"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_username"
                style="@style/style_margin_for_multiple_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/s_hint_login_edit_text_username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="@dimen/d_text_size_medium" />

            <TextView
                style="@style/style_margin_top_l_r_multiple_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_label_emailsignupwarning"
                android:textSize="@dimen/d_text_size_medium" />

            <EditText
                android:id="@+id/edit_text_email"
                style="@style/style_margin_bottom_l_r_multiple_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/s_hint_login_edit_text_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="@dimen/d_text_size_medium" />

            <EditText
                android:id="@+id/edit_text_password"
                style="@style/style_margin_for_multiple_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/s_hint_login_edit_text_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textSize="@dimen/d_text_size_medium" />

            <EditText
                android:id="@+id/edit_text_password_confirm"
                style="@style/style_margin_for_multiple_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/s_hint_login_edit_text_confirm_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textSize="@dimen/d_text_size_medium" />

            <CheckBox
                android:id="@+id/checkbox_isseller"
                style="@style/style_margin_for_multiple_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/d_margin_padding_20"
                android:checked="false"
                android:text="@string/s_checkbox_iwanttoregisterasseller"
                android:textSize="@dimen/d_text_size_medium" />

            <LinearLayout
                android:id="@+id/linearlayout_sellersignupforms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/d_margin_padding_20"
                android:layout_marginTop="@dimen/d_margin_padding_20"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkbox_mobileseller"
                    style="@style/style_margin_for_multiple_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/d_margin_padding_20"
                    android:checked="false"
                    android:text="@string/s_checkbox_im_moving_everyday"
                    android:textSize="@dimen/d_text_size_medium" />

                <TextView
                    style="@style/style_margin_top_l_r_multiple_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/d_text_size_medium"
                    android:text="@string/s_label_shopname" />

                <EditText
                    android:id="@+id/edittext_shopname"
                    style="@style/style_margin_bottom_l_r_multiple_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/d_text_size_medium"
                    android:inputType="text" />

                <Button
                    android:id="@+id/button_location"
                    style="@style/style_default_button_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/s_button_location"
                    android:textSize="@dimen/d_text_size_small"/>

            </LinearLayout>

            <Button
                android:id="@+id/button_sign_up"
                style="@style/style_for_coloured_button_and_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/s_button_submit" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>