<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar_style"
        app:title="@string/s_title_toolbar_change_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/d_margin_padding_20">

        <EditText
            android:id="@+id/edittext_password_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/style_margin_for_multiple_view"
            android:hint="@string/s_hint_changepassword_old"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textSize="@dimen/d_text_size_medium" />

        <EditText
            android:id="@+id/edittext_password_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/style_margin_for_multiple_view"
            android:hint="@string/s_hint_changepassword_new"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textSize="@dimen/d_text_size_medium" />

        <EditText
            android:id="@+id/edittext_password_new_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/style_margin_for_multiple_view"
            android:hint="@string/s_hint_changepassword_new_confirm"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textSize="@dimen/d_text_size_medium" />
    </LinearLayout>
</LinearLayout>